# zorg

./: .gitignore  CMakeLists.txt  README.md  zmq-install.sh
daemon/: CMakeLists.txt  daemon.cc  daemon.h  daemon_exception.cc  daemon_exception.h
daemon-ex/: CMakeLists.txt  exdaemon.cc  exdaemon.h  main.cc  zdex  zdex.conf
dln/: CMakeLists.txt  master_node_daemon.cc  master_node_daemon.h  node_daemon.cc  node_daemon.h  slave_node_daemon.cc  slave_node_daemon.h
dln-ex/: CMakeLists.txt  ex_daemon.cc  ex_daemon.h  main.cc  main_daemon.cc  main_daemon.h
include/: zmqh.hpp
logger/: CMakeLists.txt  logger.cc  logger.h
logger-ex/: CMakeLists.txt  log  main.cc
logger_0/: CMakeLists.txt  zlog.cc  zlog.h
logger_0-ex/: CMakeLists.txt  main.cc  zlog-ex
msg/: CMakeLists.txt
msg-ex/: CMakeLists.txt  dmx
msg-ex/d1/: CMakeLists.txt  d1  exdaemon1.cc  exdaemon1.h  main.cc
msg-ex/d2/: d2  exdaemon2.cc  exdaemon2.h  main.cc
node/: CMakeLists.txt  master_node.cc  master_node.h  node.cc  node.h  node_exception.cc  node_exception.h  slave_node.cc  slave_node.h  zhelpers.hpp
node-ex/: main.cc
node-ex/d1/: exdaemon1.cc  exdaemon1.h  main.cc
node-ex/d2/: CMakeLists.txt  exdaemon2.cc  exdaemon2.h
node-ex2/: CMakeLists.txt  main.cc
zlog/: CMakeLists.txt  main.cc  zlog  zlogger.cc  zlogger.h
zlog-demo/: CMakeLists.txt  zdemo  zdemo.cc
